(menhir
 (modules parser))

(ocamllex lexer)

(library
 (name ppx_eml)
 (kind ppx_deriver)
 (package ppx_eml)
 (flags
  (:standard -w -27))
 (modules parser lexer run eml ppx)
 (libraries ocaml-compiler-libs.common menhirLib ppxlib base stdio ppx_deriving.api)
 (preprocess
  (pps ppxlib.metaquot)))
